Fixed spacing issue in résumé.

--- a/nicolas/assets/stylesheets/resume.css
+++ b/nicolas/assets/stylesheets/resume.css
@@ -121,7 +121,7 @@ body {
 	font-family: "Roboto", system, -apple-system, -apple-system-font, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 	font-size: 11pt;
 	font-weight: 300;
-	line-height: 1.5;
+	line-height: 1.5em;
 }
 
 @media print {
